--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@radix-ui/react-slot": "1.1.1",
     "@radix-ui/react-switch": "1.1.2",
     "@radix-ui/react-tabs": "1.1.2",
-    "@radix-ui/react-toast": "1.2.4",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
@@ -50,6 +50,7 @@
     "lucide-react": "^0.454.0",
     "mysql2": "^3.15.2",
     "next": "15.2.4",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "9.8.0",
